<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Word Finder</string>
    <string name="main_menu_title">Word Finder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_score">Score</string>
    <string name="title_activity_friend">Friends Overview</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_dictionary">Dictionary</string>
    <string name="title_activity_pause_screen">PauseScreen</string>
    <string name="playGame_buttonText">Generate Board</string>
    <string name="score_buttonText">Scores</string>
    <string name="add_friendButton">Add Friend</string>
    <string name="delete_frinedRadioButton">Delete On</string>
    <string name="dictionary_buttonText">Dictionaries</string>
    <string name="searchFriendByMailButton">Search</string>
    <string name="addFoundFriendByMailButton">Add Friend</string>
    <string name="searchFriendByMailText">Type in a Friends E-Mail:</string>
    <string name="foundReasultText">Friend found in Database</string>
    <string name="noneEmailFoundText">No matching Email/Friend Found</string>
    <string name="notJetSearchedForFriendText">Not jet searched</string>
    <string name="title_activity_after_game">Game Finished</string>
    <string name="friendField_tableRowTextView"></string>
    <string name="friends_tableRow_deleteButton">Delete</string>
    <string name="dictionaries_Activity_Title">Dictionaries</string>
    <string name="dictionaries_type_Custom_Title">Custom Dictionaries</string>
    <string name="dictionaries_type_Regular_Title">Regular Dictionaries</string>
    <string name="dictionaries_Button_AddRegDict">Add regular Dictionary</string>
    <string name="dictionaries_Button_AddCustDict">Add custom Dictionary</string>
    <string name="dictionaries_Button_deleteRegDict">Del regular Dictionary</string>
    <string name="dictionaries_Button_deleteCustDict">Del custom Dictionary</string>
    <string name="dictionaries_TableRow_Checkout_Button">Checkout</string>
    <string name="dictionaries_TableRow_DictName_TextView">DictName</string>
    <string name="dictionary_insideView_Button_DelDict">Delete Dictionary</string>
    <string name="dictionary_insideView_Button_DelWord">Delete Word</string>
    <string name="dictionary_insideView_Button_AddWord">Add Word</string>
    <string name="detDictView_DictionaryNameTitle_textViwe">A Dictionary</string>
    <string name="detDictView_WordEditButtons_textViwe">Wordlist Editbuttons:</string>
    <string name="detDictView_WordEditButtons_AddWord_Button">Add</string>
    <string name="detDictView_WordEditButtons_DeleteWord_Button">Delete</string>
    <string name="scoresView_TitleText_TextView">Scores Tables</string>
    <string name="scoresView_FriendsScores_TextView">Friends Scores</string>
    <string name="scoresView_MyScores_TextView">My Own Scores</string>
    <string name="scoresView_TobFive_Own_TextView">Top Five Own Scores</string>
    <string name="scoresView_TobFive_Friends_TextView">Top Five Friend Scores</string>
    <string name="scoresView_LastTwenty_Own_TextView">Last Twenty Own Scores</string>
    <string name="scoresView_LastTwenty_Frenids_TextView">Last Twenty friends Scores</string>
    <string name="scoresView_Delete_Score_Button">Delete Score</string>
    <string name="title_activity_pause">Pause</string>
    <string name="hello">Hello world!</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter a Name for this Board</string>
    <string name="error_enter_board_name">Please enter a name for your board!</string>
    <string name="close_without_saving">If you don\'t want to save your board, you can return to the main menu without saving</string>
    <string name="error_no_name_entered">You haven\'t entered a name yet!</string>
    <string name="create_user">Create User</string>
    <string name="error_enter_user_name">Please specify a user name</string>
    <string name="title_activity_dictionaries_overview">DictionariesOverview</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_button_game">Start</string>
    <string name="pause_game_button">Pause</string>
    <string name="resume_game_button">Resume</string>
    <string name="quit_game_button">Quit</string>
    <string name="game_is_paused_information">The game is paused</string>
    <string name="score_after_game">Score:</string>
    <string name="return_main">Return to MAIN MENU</string>
    <string name="name_your_board_hint">Boardname</string>
    <string name="tutorial_buttonText">Tutorial</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="score_title">Score</string>

</resources>
