<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/searchFriendbyMailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="62dp"
        android:layout_marginLeft="36dp"
        android:text="@string/addFoundFriendByMailButton" />

    <TextView
        android:id="@+id/titleTextSearchFriendTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:ems="11"
        android:text="@string/searchFriendByMailText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/searchFriendResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/titleTextSearchFriendTextView"
        android:layout_centerVertical="true"
        android:ems="11"
        android:text="@string/foundReasultText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/searchFriendByMailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/searchFriendbyMailButton"
        android:layout_below="@+id/titleTextSearchFriendTextView"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textEmailAddress|textWebEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/searchFriendByMailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/searchFriendResultTextView"
        android:layout_alignLeft="@+id/titleTextSearchFriendTextView"
        android:layout_marginBottom="23dp"
        android:text="@string/searchFriendByMailButton" />

    <EditText
        android:id="@+id/foundFriendEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/searchFriendbyMailButton"
        android:layout_below="@+id/searchFriendResultTextView"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/notJetSearchedForFriendText" />
    
</RelativeLayout>
