<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Dictionary" >

    <TableRow
        android:id="@+id/dictionaries_Title_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dictionaries_Title_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dictionaries_Activity_Title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
	
	<TableRow
        android:id="@+id/dictionaries_TitleRegDict_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dictionaries_RegDictTitle_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dictionaries_type_Regular_Title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
    <TableRow
        android:id="@+id/dictionaries_RegDict_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/dictionaries_RegDict_ScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:id="@+id/dictionaries_RegDict_Template_TableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="yes">
            </TableLayout>
        </ScrollView>

    </TableRow>
    
    <TableRow
        android:id="@+id/dictionaries_EditButtons_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dictionaries_AddRegDict_Button"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dictionaries_Button_AddRegDict" />
        
        <Button
            android:id="@+id/dictionaries_DeleteRegDict_Button"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dictionaries_Button_deleteRegDict" />
        
	</TableRow>
        
    
    <TableRow
        android:id="@+id/dictionaries_TitleCustDict_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dictionaries_CustDictTitle_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dictionaries_type_Custom_Title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/dictionaries_CustDict_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1">

        <ScrollView
            android:id="@+id/dictionaries_CustDict_ScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:id="@+id/dictionaries_CustDict_Template_TableRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="yes">
            </TableLayout>
        </ScrollView>

    </TableRow>
    
    <TableRow
        android:id="@+id/dictionaries_EditButtons_CustDict_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dictionaries_AddCustDict_Button"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dictionaries_Button_AddCustDict" />

        <Button
            android:id="@+id/dictionaries_deleteCustDict_Button"
            style="?android:attr/buttonStyleSmall"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dictionaries_Button_deleteCustDict" />
        
    </TableRow>
</TableLayout>
