<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MainMenu" >

    <TextView
        android:id="@+id/MainMenuTitleTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/main_menu_title"
        android:gravity="center"
        android:textSize="48sp" />

    <Button
        android:id="@+id/PlayGame"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/MainMenuTitleTextView"
        android:layout_marginTop="17dp"
        android:text="@string/playGame_buttonText"
        android:onClick="openPlayGame"/>
    
    <Button 
        android:id="@+id/Score"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/PlayGame"
        android:layout_marginTop="17dp"
        android:text="@string/score_buttonText"
        android:onClick="openScores"/>
    
    <Button 
        android:id="@+id/Friend"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Score"
        android:layout_marginTop="17dp"
        android:text="@string/friend_buttonText"
        android:onClick="openFriend"
        android:visibility="invisible" />
    
    <Button 
        android:id="@+id/Dictionary"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Friend"
        android:layout_marginTop="17dp"
        android:text="@string/dictionary_buttonText"
        android:onClick="openDictionary"
        android:visibility="invisible"/>
    
</RelativeLayout>
