<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_detailled_dictionaryview_MainTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/detDictView_DictionaryTitleName_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/detDictView_DictionaryTitleName_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detDictView_DictionaryNameTitle_textViwe" >
        </TextView>

    </TableRow>

    <TableRow
        android:id="@+id/detDictView_ScrollView_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ScrollView
            android:id="@+id/detDictView_ScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableLayout
                android:id="@+id/TableLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </TableLayout>
        </ScrollView>
    </TableRow>

    <TableRow
        android:id="@+id/detDictView_TitleEditButton_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/detDictView_TitleEditButton_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detDictView_WordEditButtons_textViwe" >
		</TextView>
		
    </TableRow>

    <TableRow
        android:id="@+id/detDictView_EditButton_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/detDictView_AddWord_Button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detDictView_WordEditButtons_AddWord_Button" />

        <Button
            android:id="@+id/detDictView_deleteWord_Button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detDictView_WordEditButtons_DeleteWord_Button" />

    </TableRow>

</TableLayout>
