<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FriendsTable" >

    <TextView
        android:id="@+id/friendsTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:text="@string/title_activity_friend"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    

    

    <RadioButton
        android:id="@+id/deleteFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="27dp"
        android:layout_toRightOf="@+id/addFriendButton"
        android:onClick="deleteFriend"
        android:text="@string/delete_frinedRadioButton" />

    <Button
        android:id="@+id/addFriendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deleteFriend"
        android:layout_alignBottom="@+id/deleteFriend"
        android:layout_alignLeft="@+id/friendsTitleTextView"
        android:onClick="addFriend"
        android:text="@string/add_friendButton" />

    <ListView
        android:id="@+id/friendsListListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addFriendButton"
        android:layout_below="@+id/friendsTitleTextView" >

    </ListView>
    
</RelativeLayout>