<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scores_activity_TableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/scores_Title_Text_TableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/scoresView_TitleText_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoresView_TitleText_TextView"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/scores_OwnTopFive_Text_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/scores_OwnTopFive_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoresView_TobFive_Own_TextView" />

    </TableRow>

    <TableRow
        android:id="@+id/scores_OwnTopFive_ScrollView_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    

        <ScrollView
            android:id="@+id/scores_OwnTopFive_ScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_weight="1">

          	<TableRow
        		android:id="@+id/scores_OwnTopFive_ScrollView_InnerTableRow"
       			android:layout_width="match_parent"
        		android:layout_height="wrap_content" >
       	
       		</TableRow>
        </ScrollView>

    </TableRow>

    <TableRow
        android:id="@+id/scores_OwnLastTwenty_TitleText_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/scores_OwnLastTwenty_TitleText_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoresView_LastTwenty_Own_TextView" />

    </TableRow>

    <TableRow
        android:id="@+id/scores_OwnLastTwenty_ScrollViwe_TableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ScrollView
            android:id="@+id/scores_OwnLastTwenty_ScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_weight="1">

            <TableRow
        		android:id="@+id/scores_OwnLastTwenty_ScrollView_InnerTableRow"
       			android:layout_width="match_parent"
        		android:layout_height="wrap_content" >
       	
       		</TableRow>
            
        </ScrollView>

    </TableRow>

    <TableRow
        android:id="@+id/scores_DeleteButton_TableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/scores_DeleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoresView_Delete_Score_Button" />

    </TableRow>

</TableLayout>
